--- a/clase_01/index.html
+++ b/clase_01/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h1>HOLA MUNDO</h1>
+    <h2>Subtítulo</h2>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam adipisci atque, tempore numquam amet debitis sint voluptate libero obcaecati vero perspiciatis nam saepe, consequatur placeat fuga maxime aut. Quaerat officiis qui reprehenderit iste dolores dicta quia recusandae corporis consequatur neque voluptatem, asperiores in modi perferendis eius tempora aspernatur delectus provident id hic quasi sunt suscipit! Dolores neque facere minus officiis. Recusandae, fuga ipsa sint et quisquam, at pariatur voluptates delectus accusamus voluptatem adipisci expedita! Inventore error voluptatibus nulla voluptatem, harum maxime velit placeat assumenda incidunt necessitatibus sapiente vel! Cum beatae aliquam recusandae totam sunt dolores assumenda eos officiis omnis suscipit!
+    </p>
 </body>
 </html>
