--- a/clase_05/index.html
+++ b/clase_05/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <!-- <h1>HOLA MUNDO</h1>
-    <h2>Subtítulo</h2> -->
-    <div class="corazon"></div>
+    <h1>JavaScript</h1>
+
+    <script src="scripts.js"></script>
 </body>
 </html>
